--- a/index.html
+++ b/index.html
@@ -31,144 +31,158 @@
             </header>
             <main>
                 <h3 class="center uppercase">Blog</h3>
-                    <div class="subcontainer clearfix">
-                        <section class="wide">
-                            <article class="gridItemA">
-                                <img class="fitdiv" src="assets/image-2.jpg">
-                                <div>
-                                    <h4>
-                                        HackerYou Tech Test
-                                    </h4>
-                                    <h5>
-                                        March 1st, 2018
-                                    </h5>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                                        Ut wisi enim ad minim veniam, quis nostrud
-                                    </p>
-                                    <a>Read More</a>
-                                </div>
-                            </article>
-                            <article class="gridItemB">
-                                <img class="fitdiv" src="assets/image-3.jpg">
-                                <div>
-                                    <h4>
-                                        HackerYou Tech Test
-                                    </h4>
-                                    <h5>
-                                        March 1st, 2018
-                                    </h5>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                                        Ut wisi enim ad minim veniam, quis nostrud
-                                    </p>
-                                    <a>Read More</a>
-                                </div>
-                            </article>
-                            <article class="gridItemC">
-                                <img class="fitdiv" src="assets/image-5.jpg">
-                                <div>
-                                    <h4>
-                                        HackerYou Tech Test
-                                    </h4>
-                                    <h5>
-                                        March 1st, 2018
-                                    </h5>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                                        Ut wisi enim ad minim veniam, quis nostrud
-                                    </p>
-                                    <a>Read More</a>
-                                </div>
-                            </article>
-                        </section>
-                        <aside class="thin">
-                            <img class="fitdiv" src="assets/image-4.jpg">
+                <div class="subcontainer clearfix">
+                    <section class="gridA">
+                        <article class="gridItemA">
+                            <img class="fitdiv" src="assets/image-2.jpg">
                             <div>
-                                <h3>About Us</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                                    Ut wisi enim ad minim veniam, quis nostrud exerci tation ullacorper suscipit lobortis nist ut aliquip
-                                    ex ea comomdo consequat. Duis autem vel eum iriure dolor in henderit in vulpate velit esse molestie consequat, vel ilum dolore eq
-                                    feugiat nulla</p>
+                                <h4 class="uppercase center">
+                                    HackerYou Tech Test
+                                </h4>
+                                <h5 class="italic center">
+                                    March 1st, 2018
+                                </h5>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                    Ut wisi enim ad minim veniam, quis nostrud
+                                </p>
+                                <a class="nodecor uppercase red" href="#">Read More</a>
                             </div>
-                        </aside>
+                        </article>
+                        <article class="gridItemB">
+                            <img class="fitdiv" src="assets/image-3.jpg">
+                            <div>
+                                <h4 class="uppercase center">
+                                    HackerYou Tech Test
+                                </h4>
+                                <h5 class="italic center">
+                                    March 1st, 2018
+                                </h5>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                    Ut wisi enim ad minim veniam, quis nostrud
+                                </p>
+                                <a class="nodecor uppercase red" href="#">Read More</a>
+                            </div>
+                        </article>
+                        <article class="gridItemC">
+                            <img class="fitdiv" src="assets/image-5.jpg">
+                            <div>
+                                <h4 class="uppercase center">
+                                    HackerYou Tech Test
+                                </h4>
+                                <h5 class="italic center">
+                                    March 1st, 2018
+                                </h5>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                    Ut wisi enim ad minim veniam, quis nostrud exerci tation ullacorper suscipit lobortis nist ut aliquip
+                                    ex ea comomdo consequat. Duis autem vel eum iriure dolor in henderit in vulpate velit esse molestie consequat, vel ilum dolore eq feugiat nulla facilis at evero
+                                </p>
+                                <a  class="nodecor uppercase red" href="#">Read More</a>
+                            </div>
+                        </article>
+                    </section>
+                    <aside class="about">
+                        <img class="fitdiv" src="assets/image-4.jpg">
+                        <div>
+                            <h3 class="uppercase center">About Us</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                Ut wisi enim ad minim veniam, quis nostrud exerci tation ullacorper suscipit lobortis nist ut aliquip
+                                ex ea comomdo consequat. Duis autem vel eum iriure dolor in henderit in vulpate velit esse molestie consequat, vel ilum dolore eq
+                                feugiat nulla</p>
+                        </div>
+                    </aside>
+                </div>
+                <section class="related">
+                    <h3 class="center uppercase bold">Related Posts</h3>
+                    <div class="subcontainer gridB">
+                        <article>
+                            <img class="fitdiv" src="assets/image-6.jpg">
+                            <div>
+                                <h4 class="center">
+                                    HACKERYOU TECH TEST
+                                <h5 class="italic center">
+                                    March 1st, 2018
+                                </h5>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                    Ut wisi enim ad minim veniam, quis nostrud
+                                </p>
+                                <a class="nodecor uppercase red" href="#">Read More</a>
+                            </div>
+                        </article>
+                        <article>
+                            <img class="fitdiv" src="assets/image-7.jpg">
+                            <div>
+                                <h4 class="center">
+                                    HACKERYOU TECH TEST
+                                </h4>
+                                <h5 class="italic center">
+                                    March 1st, 2018
+                                </h5>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                    Ut wisi enim ad minim veniam, quis nostrud
+                                </p>
+                                <a class="nodecor uppercase red" href="#">Read More</a>
+                            </div>
+                        </article>
+                        <article>
+                            <img class="fitdiv" src="assets/image-8.jpg">
+                            <div>
+                                <h4 class="center">
+                                    HACKERYOU TECH TEST
+                                </h4>
+                                <h5 class="italic center">
+                                    March 1st, 2018
+                                </h5>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                    Ut wisi enim ad minim veniam, quis nostrud
+                                </p>
+                                <a class="nodecor uppercase red" href="#">Read More</a>
+                            </div>
+                        </article>
                     </div>
-                        <section>
-                            <h3>Related Posts</h3>
-                            <article>
-                                <img src="assets/image-6.jpg">
-                                <div>
-                                    <h4>
-                                        HACKERYOU TECH TEST
-                                    </h4>
-                                    <h5>
-                                        March 1st, 2018
-                                    </h5>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                                        Ut wisi enim ad minim veniam, quis nostrud
-                                    </p>
-                                    <a>Read More</a>
-                                </div>
-                            </article>
-                            <article>
-                                <img>
-                                <div>
-                                    <h4>
-                                        HACKERYOU TECH TEST
-                                    </h4>
-                                    <h5>
-                                        March 1st, 2018
-                                    </h5>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                                        Ut wisi enim ad minim veniam, quis nostrud
-                                    </p>
-                                    <a>Read More</a>
-                                </div>
-                            </article>
-                            <article>
-                                <img>
-                                <div>
-                                    <h4>
-                                        HACKERYOU TECH TEST
-                                    </h4>
-                                    <h5>
-                                        March 1st, 2018
-                                    </h5>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                                        Ut wisi enim ad minim veniam, quis nostrud
-                                    </p>
-                                    <a>Read More</a>
-                                </div>
-                            </article>
-                        </section>                    
+                </section>
             </main>
             <footer>
-                <div>
-                    <h4>HackerYou Tech Test</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                        Ut wisi enim ad minim veniam, quis nostrud exerci tation ullacorper suscipit lobortis nist ut aliquip
-                        ex ea comomdo consequat.</p>
+                <div class="subcontainer">
+                    <div>
+                        <h4>HackerYou Tech Test</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                            Ut wisi enim ad minim veniam, quis nostrud exerci tation ullacorper suscipit lobortis nist ut aliquip
+                            ex ea comomdo consequat.</p>
+                    </div>
+                    <nav>
+                        <ul>
+                            <li>Home</li>
+                            <li>About</li>
+                            <li>Contact</li>
+                            <li>Bootcamp</li>
+                            <li>Part-Time</li>
+                        </ul>
+                    </nav>
+                    <form>
+                        <h4>Subscribe to our newsletter</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                            Ut wisi enim ad minim
+                        </p>
+                        <input type="email" name="email" placeholder="email address">
+                        <button type="submit">Subscribe</button>
+                    </form>
                 </div>
-                <nav>
-                    <ul>
-                        <li>Home</li>
-                        <li>About</li>
-                        <li>Contact</li>
-                        <li>Bootcamp</li>
-                        <li>Part-Time</li>
-                    </ul>
-                </nav>
-                <form>
-                    <h4>Subscribe to our newsletter</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                        Ut wisi enim ad minim
-                    </p>
-                    <input type="email" name="email" placeholder="email address">
-                    <button type="submit">Subscribe</button>
-                </form>
+                <div class="subcontainer copy">
+                    <span>&copy; 2018 HackerYou</span>
+                    <div>
+                        Twitter
+                        Instagram
+                        Facebook
+                        G+
+                    </div>
+
+                </div>
             </footer>
 
         </div>
