Media footer to do

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                 <h4 class="uppercase center">
                                     HackerYou Tech Test
                                 </h4>
-                                <h5 class="italic center">
+                                <h5 class="italic center notoserif">
                                     March 1st, 2018
                                 </h5>
                                 <p>
@@ -55,7 +55,7 @@
                                 <h4 class="uppercase center">
                                     HackerYou Tech Test
                                 </h4>
-                                <h5 class="italic center">
+                                <h5 class="italic center notoserif">
                                     March 1st, 2018
                                 </h5>
                                 <p>
@@ -71,7 +71,7 @@
                                 <h4 class="uppercase center">
                                     HackerYou Tech Test
                                 </h4>
-                                <h5 class="italic center">
+                                <h5 class="italic center notoserif">
                                     March 1st, 2018
                                 </h5>
                                 <p>
@@ -100,9 +100,9 @@
                         <article>
                             <img class="fitdiv" src="assets/image-6.jpg">
                             <div>
-                                <h4 class="center">
-                                    HACKERYOU TECH TEST
-                                <h5 class="italic center">
+                                <h4 class="center uppercase">
+                                    HackerYou Tech Test
+                                <h5 class="italic center notoserif">
                                     March 1st, 2018
                                 </h5>
                                 <p>
@@ -115,10 +115,10 @@
                         <article>
                             <img class="fitdiv" src="assets/image-7.jpg">
                             <div>
-                                <h4 class="center">
-                                    HACKERYOU TECH TEST
+                                <h4 class="center uppercase">
+                                    HackerYou Tech Test
                                 </h4>
-                                <h5 class="italic center">
+                                <h5 class="italic notoserif center">
                                     March 1st, 2018
                                 </h5>
                                 <p>
@@ -131,10 +131,10 @@
                         <article>
                             <img class="fitdiv" src="assets/image-8.jpg">
                             <div>
-                                <h4 class="center">
-                                    HACKERYOU TECH TEST
+                                <h4 class="center uppercase">
+                                    HackerYou Tech Test
                                 </h4>
-                                <h5 class="italic center">
+                                <h5 class="italic notoserif center">
                                     March 1st, 2018
                                 </h5>
                                 <p>
@@ -147,41 +147,45 @@
                     </div>
                 </section>
             </main>
-            <footer>
-                <div class="subcontainer">
-                    <div>
-                        <h4>HackerYou Tech Test</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                            Ut wisi enim ad minim veniam, quis nostrud exerci tation ullacorper suscipit lobortis nist ut aliquip
-                            ex ea comomdo consequat.</p>
+            <footer class="white raleway">
+                <div class="upper">
+                    <div class="subcontainer gridC">
+                        <div>
+                            <h4 class="uppercase">HackerYou Tech Test</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                Ut wisi enim ad minim veniam, quis nostrud exerci tation ullacorper suscipit lobortis nist ut aliquip
+                                ex ea comomdo consequat.</p>
+                        </div>
+                        <nav>
+                            <ul class="uppercase">
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">About</a></li>
+                                <li><a href="#">Bootcamp</a></li>
+                                <li><a href="#">Part-time</a></li>
+                                <li><a href="#">Contact</a></li>
+                            </ul>
+                        </nav>
+                        <form>
+                            <h4 class="uppercase">Subscribe to our newsletter</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                Ut wisi enim ad minim
+                            </p>
+                            <input class="raleway"type="email" name="email" placeholder="email address">
+                            <button class="raleway uppercase"type="submit">Subscribe</button>
+                        </form>
                     </div>
-                    <nav>
-                        <ul>
-                            <li>Home</li>
-                            <li>About</li>
-                            <li>Contact</li>
-                            <li>Bootcamp</li>
-                            <li>Part-Time</li>
-                        </ul>
-                    </nav>
-                    <form>
-                        <h4>Subscribe to our newsletter</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                            Ut wisi enim ad minim
-                        </p>
-                        <input type="email" name="email" placeholder="email address">
-                        <button type="submit">Subscribe</button>
-                    </form>
                 </div>
-                <div class="subcontainer copy">
-                    <span>&copy; 2018 HackerYou</span>
-                    <div>
-                        Twitter
-                        Instagram
-                        Facebook
-                        G+
-                    </div>
+                <div class="lower">
+                    <div class="subcontainer">
+                        <span>&copy; 2018 HackerYou</span>
+                        <div>
+                            Twitter
+                            Instagram
+                            Facebook
+                            G+
+                        </div>
 
+                    </div>
                 </div>
             </footer>
 
