Before Subcontaining Top Nav

--- a/index.html
+++ b/index.html
@@ -176,13 +176,14 @@
                     </div>
                 </div>
                 <div class="lower">
-                    <div class="subcontainer">
-                        <span>&copy; 2018 HackerYou</span>
-                        <div>
-                            Twitter
-                            Instagram
-                            Facebook
-                            G+
+                    <div class="subcontainer clearfix">
+                        <span class="bold left uppercase">&copy; 2018 HackerYou</span>
+                        <div class="right">
+                            <i class="fab fa-twitter"></i>
+                            <i class="fab fa-instagram"></i>
+                            <i class="fab fa-facebook"></i>
+                            <i class="fab fa-google-plus-g"></i>
+
                         </div>
 
                     </div>
