--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
     <body>
         <div class="container">
             <header>
-                <nav class="raleway uppercase clearfix">
-                    <h2 class="bold"><a class="nodecor black" href="#">HackerYou</a></h2>
-                    <ul class="bold">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">Bootcamp</a></li>
-                        <li><a href="#">Part-time</a></li>
-                    </ul>
-                </nav>
+                <div class="subcontainer">
+                    <nav class="raleway uppercase clearfix">
+                        <h2 class="bold"><a class="nodecor black" href="#">HackerYou</a></h2>
+                        <ul class="bold">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Contact</a></li>
+                            <li><a href="#">Bootcamp</a></li>
+                            <li><a href="#">Part-time</a></li>
+                        </ul>
+                    </nav>
+                </div>
                 <section class="raleway">
                     <article>
                         <h1 class="uppercase center">HackerYou Tech Test</h1>
@@ -150,14 +152,14 @@
             <footer class="white raleway">
                 <div class="upper">
                     <div class="subcontainer gridC">
-                        <div>
+                        <div class="c1">
                             <h4 class="uppercase">HackerYou Tech Test</h4>
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
                                 Ut wisi enim ad minim veniam, quis nostrud exerci tation ullacorper suscipit lobortis nist ut aliquip
                                 ex ea comomdo consequat.</p>
                         </div>
                         <nav>
-                            <ul class="uppercase">
+                            <ul class="c2 uppercase">
                                 <li><a href="#">Home</a></li>
                                 <li><a href="#">About</a></li>
                                 <li><a href="#">Bootcamp</a></li>
@@ -165,7 +167,7 @@
                                 <li><a href="#">Contact</a></li>
                             </ul>
                         </nav>
-                        <form>
+                        <form class="c3">
                             <h4 class="uppercase">Subscribe to our newsletter</h4>
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
                                 Ut wisi enim ad minim
@@ -179,10 +181,11 @@
                     <div class="subcontainer clearfix">
                         <span class="bold left uppercase">&copy; 2018 HackerYou</span>
                         <div class="right">
-                            <i class="fab fa-twitter"></i>
-                            <i class="fab fa-instagram"></i>
-                            <i class="fab fa-facebook"></i>
-                            <i class="fab fa-google-plus-g"></i>
+
+                            <a class="white nodecor" href="#"><i class="fab fa-twitter"></i> </a>
+                            <a class="white nodecor" href="#"><i class="fab fa-instagram"></i> </a>
+                            <a class="white nodecor" href="#"><i class="fab fa-facebook"></i></a>
+                            <a class="white nodecor" href="#"><i class="fab fa-google-plus-g"></i></a>
 
                         </div>
 
