Finished sub 900px media

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
                                 Ut wisi enim ad minim veniam, quis nostrud exerci tation ullacorper suscipit lobortis nist ut aliquip
                                 ex ea comomdo consequat.</p>
                         </div>
-                        <nav>
-                            <ul class="c2 uppercase">
+                        <nav class="c2">
+                            <ul class=" uppercase">
                                 <li><a href="#">Home</a></li>
                                 <li><a href="#">About</a></li>
                                 <li><a href="#">Bootcamp</a></li>
@@ -181,14 +181,11 @@
                     <div class="subcontainer clearfix">
                         <span class="bold left uppercase">&copy; 2018 HackerYou</span>
                         <div class="right">
-
                             <a class="white nodecor" href="#"><i class="fab fa-twitter"></i> </a>
                             <a class="white nodecor" href="#"><i class="fab fa-instagram"></i> </a>
                             <a class="white nodecor" href="#"><i class="fab fa-facebook"></i></a>
                             <a class="white nodecor" href="#"><i class="fab fa-google-plus-g"></i></a>
-
                         </div>
-
                     </div>
                 </div>
             </footer>
