--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="subcontainer clearfix">
                     <section class="gridA">
                         <article class="gridItemA">
-                            <img class="fitdiv" src="assets/image-2.jpg">
+                            <img class="fitdiv" src="assets/image-2.jpg" alt="Three people wearing matching jean jackets with hands on their hips staring into the same direction with a determined look">
                             <div>
                                 <h4 class="uppercase center">
                                     HackerYou Tech Test
@@ -52,7 +52,7 @@
                             </div>
                         </article>
                         <article class="gridItemB">
-                            <img class="fitdiv" src="assets/image-3.jpg">
+                            <img class="fitdiv" src="assets/image-3.jpg" alt="A teacher standing near a student who's sitting down with a laptop, discussing something relating to what's on screen">
                             <div>
                                 <h4 class="uppercase center">
                                     HackerYou Tech Test
@@ -68,7 +68,7 @@
                             </div>
                         </article>
                         <article class="gridItemC">
-                            <img class="fitdiv" src="assets/image-5.jpg">
+                            <img class="fitdiv" src="assets/image-5.jpg" alt="Two females sitting down at a table facing the camera, with their laptops' Apple logos facing the camera as well">
                             <div>
                                 <h4 class="uppercase center">
                                     HackerYou Tech Test
@@ -86,7 +86,7 @@
                         </article>
                     </section>
                     <aside class="about">
-                        <img class="fitdiv" src="assets/image-4.jpg">
+                        <img class="fitdiv" src="assets/image-4.jpg" alt="A man standing with a laptop in front of him, scratching his chin, seemingly deep in thought">
                         <div>
                             <h3 class="uppercase center">About Us</h3>
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
@@ -100,7 +100,7 @@
                     <h3 class="center uppercase bold">Related Posts</h3>
                     <div class="subcontainer gridB">
                         <article>
-                            <img class="fitdiv" src="assets/image-6.jpg">
+                            <img class="fitdiv" src="assets/image-6.jpg" alt="A group of students gathered around a table that has ingredients to make a taco">
                             <div>
                                 <h4 class="center uppercase">
                                     HackerYou Tech Test
@@ -115,7 +115,7 @@
                             </div>
                         </article>
                         <article>
-                            <img class="fitdiv" src="assets/image-7.jpg">
+                            <img class="fitdiv" src="assets/image-7.jpg" alt="A row of laptops with students working on what seems to be a web-design project">
                             <div>
                                 <h4 class="center uppercase">
                                     HackerYou Tech Test
@@ -131,7 +131,7 @@
                             </div>
                         </article>
                         <article>
-                            <img class="fitdiv" src="assets/image-8.jpg">
+                            <img class="fitdiv" src="assets/image-8.jpg" alt="A shot of students immersed in working on their laptops in the classroom">
                             <div>
                                 <h4 class="center uppercase">
                                     HackerYou Tech Test
